--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.16.2",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0",
+    "vue-socket.io": "^2.1.1-a",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
