--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "babel-preset-es2015": "^6.24.1",
+    "sweet-modal-vue": "^1.1.2",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0",
     "vue-socket.io": "^2.1.1-a",
